--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fondamento&family=Lato:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fondamento&family=Knewave&family=Shadows+Into+Light&family=Lato:wght@300&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
